# repositories/voters-frontend/docs/swagger.json
@@ -24,6 +24,26 @@
                 }
             }
         },
+        "/after-vote": {
+            "get": {
+                "description": "Responds with an HTML page with a rought total graph",
+                "produces": [
+                    "text/html"
+                ],
+                "tags": [
+                    "html"
+                ],
+                "summary": "Serve HTML rought total page",
+                "responses": {
+                    "200": {
+                        "description": "HTML Content",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/participants": {
             "get": {
                 "description": "Responds with the list of participants",
@@ -94,26 +114,6 @@
                             "additionalProperties": {
                                 "type": "integer"
                             }
-                        }
-                    }
-                }
-            }
-        },
-        "/post-vote": {
-            "get": {
-                "description": "Responds with an HTML page with a rought total graph",
-                "produces": [
-                    "text/html"
-                ],
-                "tags": [
-                    "api"
-                ],
-                "summary": "Serve HTML rought total page",
-                "responses": {
-                    "200": {
-                        "description": "HTML Content",
-                        "schema": {
-                            "type": "string"
                         }
                     }
                 }
